--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -460,7 +460,7 @@
                                          var isExternLink = false;
                                          if ((typeof link != 'undefined') && (link != "")) {
                                             isExternLink = true;
-                                            downloadLink = '<a href="' + link + '" id="data-link' + this.id + '">' + this.name + '</a>';
+                                            downloadLink = '<a href="' + decodeURIComponent(link) + '" id="data-link' + this.id + '">' + this.name + '</a>';
                                          }
 	                                     $pploadCollection.find('table[data-ppload-files] tbody').append(
 	                                        '<tr' + greyText + '>'
