--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -123,7 +123,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                 <section class="wrapper">
                     <span class="header_cat_link" id="header_cat_link">
                         <a href="/browse/cat/<?= isset($this->cat_id) ? $this->cat_id : 'all' ?>/order/latest">
-                            /<?=$store_name?>
+                            <?=$store_name?>
                         </a>
                     </span>
                 </section>
