--- a/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
@@ -38,7 +38,7 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
 //$captcha->setFont(APPLICATION_PATH . '/../httpdocs/theme/flatui/fonts/OpenSans-Regular.ttf');
 //$captcha->generate();
 ?>
-<div class="container">
+<div>
     <div class="row">
         <div class="col-md-8">
             <div class="page-header relative">
