--- a/application/modules/backend/views/scripts/comments/index.phtml
+++ b/application/modules/backend/views/scripts/comments/index.phtml
@@ -63,7 +63,7 @@
                     edit: false
                 },
                 comment_target_id: {
-                    title: 'target id',
+                    title: 'project id',
                     width: '5%',
                     edit: false
                 },
