--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -652,7 +652,10 @@ ul.meta-nav-top
             color: #222;  
             background-color:@contentbgcolor;       
             border-bottom: 3px solid #fff;
-          }      
+          } 
+           > a:focus{
+            background-color:@contentbgcolor;                   
+          }     
         } 
       > li.active{
         > a {
@@ -671,6 +674,9 @@ ul.meta-nav-top
           font-weight: bold;
 
         }
+         > a:focus{
+            background-color:@contentbgcolor;                   
+          }  
       }      
     } 
 }
