--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -205,7 +205,10 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(*) Info:</p><p>This service will go live on May, 1st 2017. All previously shown amounts are for testing only.</p>
+        <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previously shown amounts are for testing only. </p>
+        <p>Until the end of the year this live phase is entering Beta, during which we will test payment services like Paypal or Bitcoin.</p>
+        <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
+        <p>This live phase is considered Beta until the end of the year, during which we will test payment services like Paypal or Bitcoin.</p>
         <br>
         <p>TOS:</p>
         <p>This payout service is completely voluntarily. It is within Hive01's full rights to decide at any time:</p>
