--- a/application/modules/backend/views/scripts/member/index.phtml
+++ b/application/modules/backend/views/scripts/member/index.phtml
@@ -68,6 +68,7 @@
             {key: "username", label: "Benutzername", sortable: true},
             {key: "mail", label: "E-Mail", sortable: true},
             {key: "paypal_mail", label: "PayPal Mail", sortable: true},
+            {key: "wallet_address", label: "Bitcoin Address", sortable: true},
             {key: "created_at", label: "Angemeldet am", sortable: true},
             {key: "last_online", label: "Zuletzt online", sortable: true},
             {key: "mail_checked", label: "Active", sortable: false},
@@ -82,6 +83,7 @@
             {key: "username"},
             {key: "mail"},
             {key: "paypal_mail"},
+            {key: "bitcoin_address"},
             {key: "created_at", parser: "datetime"},
             {key: "last_online", parser: "datetime"},
             {key: "mail_checked"},
