--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -186,6 +186,11 @@
                     width: '5%',
                     list: true
                 },
+                wallet_address: {
+                    title: 'wallet_address',
+                    width: '5%',
+                    list: true
+                },
                 main_project_id: {
                     title: 'main_project_id',
                     list: false
