--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -101,12 +101,15 @@ $userRoleName = $helperUserRole->userRole();
             <a id="delete-this" href="/backend/project/delete?project_id=<?= $this->product->project_id ?>">delete product</a>
         </span>
 
-        <div style="clear: both"></div>
+        <div style="clear: both" class="small">(remember the cache) after you change some value below and refresh the page you may encounter some differences to your changes</div>
         <span class="page-views">
           <input type="checkbox" id="feature-this-checkbox" <?php echo $this->product->featured == 1 ? ' checked ' : ''; ?> /> toggle featured
         </span>
         <span class="page-views">
             <input type="checkbox" id="approve-this-checkbox" <?php echo $this->product->approved == 1 ? ' checked ' : ''; ?> /> toggle approved
+        </span>
+        <span class="page-views">
+            <input type="checkbox" id="spam-checked-checkbox" <?php echo $this->product->spam_checked == 1 ? ' checked ' : ''; ?> /> toggle spam checked
         </span>
 
         <script>
@@ -127,6 +130,39 @@ $userRoleName = $helperUserRole->userRole();
                 }
 
                 return false;
+            });
+
+            $('#spam-checked-checkbox').on('click', function (event) {
+                event.stopPropagation();
+                var feature = 0;
+                if (this.checked) {
+                    feature = 1;
+                } else {
+                    feature = 0;
+                }
+
+                var target = "/backend/project/dospamchecked?project_id=<?= $this->product->project_id ?>&checked=" + feature;
+                $.ajax({
+                    url: target,
+                    success: function (results) {
+                        if (results.spam_checked) {
+                            alert(results.spam_checked);
+                        }
+                        if (feature == 0) {
+                            $('#spam-checked-checkbox').prop("checked", false);
+                        } else {
+                            $('#spam-checked-checkbox').prop("checked", true);
+
+                        }
+
+                    },
+                    error: function () {
+                        alert('Service is temporarily unavailable.');
+                    }
+                });
+
+                return false;
+
             });
 
             $('#feature-this-checkbox').on('click', function (event) {
@@ -161,7 +197,6 @@ $userRoleName = $helperUserRole->userRole();
                 return false;
 
             });
-
 
             $('#approve-this-checkbox').on('click', function (event) {
                 event.stopPropagation();
