--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -118,7 +118,7 @@ $member = $getAuthUser->getAuthUser();
                                                     <?= $this->translate('Add Product') ?>
                                                 </a>
                                             </li>
-                                            <li class="link first">
+                                            <li class="link">
                                                 <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>">
                                                     <?= $this->translate('My Products') ?>
                                                 </a>
@@ -129,7 +129,7 @@ $member = $getAuthUser->getAuthUser();
                                                     <?= $this->translate('My Settings') ?>
                                                 </a>
                                             </li>
-                                            <li class="link first">
+                                            <li class="link">
                                                 <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
                                                     <?= $this->translate('Plings') ?>
                                                 </a>
