--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -87,13 +87,13 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                                 <li class="link first">
                                                     <a href="/product/add/"><?= $this->translate('Add Product') ?></a>
                                                 </li>
-                                                <li class="link first">
+                                                <li class="link">
                                                     <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
                                                 </li>
                                                 <li class="link">
                                                     <a href="/settings/"><?= $this->translate('My Settings') ?></a>
                                                 </li>
-                                                <li class="link first">
+                                                <li class="link">
                                                     <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
                                                         <?= $this->translate('Plings') ?>
                                                     </a>
