--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -412,7 +412,7 @@ $this->inlineScript()->appendScript(
                     <?= $this->translate('Cancel Upload') ?>
                 </button>
                 <button id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
-                    <?= $this->translate('Add Github File-Link') ?>
+                    <?= $this->translate('Add URL') ?>
                 </button>
                 <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Close') ?></button>
             </div>
@@ -429,11 +429,11 @@ $this->inlineScript()->appendScript(
 
         $('body').on("click", "#github_picker", function (event) {
 
-            html = '<form id="git-url-form">' +
+            html = '<form id="get-url-form">' +
                 '<div class="form-group">' +
-                '<input type="url" class="form-control" id="git-url" placeholder="put URL to download files here" required="required" pattern="^https:\/\/(?:(?:(?:www\.)?github)?|(?:raw\.githubusercontent)?)\.com\/.+$" />' +
-                '<span id="git-url-help" class="help-block small">e.g. https://github.com/mongodb/mongo/archive/r3.5.2.tar.gz</span></div>' +
-                '<button type="submit" class="btn btn-native btn-sm" id="git-url-submit">Submit</button>' +
+                '<input type="url" class="form-control" id="get-url" placeholder="Enter a URL where the files can be downloaded" required="required" />' +
+                '<span id="get-url-help" class="help-block small">e.g. https://github.com/mongodb/mongo/archive/r3.5.2.tar.gz</span></div>' +
+                '<button type="submit" class="btn btn-native btn-sm" id="get-url-submit">Submit</button>' +
                 '</form>';
 
             var msgBox = $('#generic-dialog');
@@ -446,36 +446,40 @@ $this->inlineScript()->appendScript(
 
         });
 
-        $('body').on('submit', '#git-url-form', function(event) {
-            if (! $('#git-url-form').validate()) {
+        $('body').on('submit', '#get-url-form', function(event) {
+            if (! $('#get-url-form').validate()) {
                 return true;
             }
             event.preventDefault();
             $.ajax({
-                url: '/file/gitlink/',
+                url: '/file/link/',
                 type: 'post',
                 data: {
                     project_id: $('#modal-ppload').attr('data-product-id'),
-                    u: $('#git-url').val()
+                    u: $('#get-url').val()
                 },
                 success: function(returned_data) {
                     if (!returned_data.file) {
-                        $('#git-url').addClass('hasError').focus();
-                        $('#git-url-help').html('An Error occurred. Please check your URL or try again later.');
+                        $('#get-url').addClass('hasError').focus();
+                        $('#get-url-help').html('An Error occurred. Please check your URL or try again later.');
                         return;
                     }
                     data_file = returned_data.file;
                     $modalPpload.attr('data-ppload-collection-id', data_file.collection_id);
-                    $('#git-url').val('').removeClass('hasError');
-                    $('#git-url-help').html('');
+                    $('#get-url').val('').removeClass('hasError');
+                    $('#get-url-help').html('');
                     $('#generic-dialog').modal('hide');
                     getPploadFiles();
                 },
                 error: function() {
-                    $('#git-url').addClass('hasError').focus();
-                    $('#git-url-help').html('An Error occurred. Please check your URL or try again later.');
+                    $('#get-url').addClass('hasError').focus();
+                    $('#get-url-help').html('An Error occurred. Please check your URL or try again later.');
                 }
             });
+        });
+
+        $('body').on('change', '#get-url', function(event) {
+            $('#get-url-help').empty();
         });
 
         var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
