--- a/application/modules/backend/views/scripts/member/index.phtml
+++ b/application/modules/backend/views/scripts/member/index.phtml
@@ -68,7 +68,8 @@
             {key: "username", label: "Benutzername", sortable: true},
             {key: "mail", label: "E-Mail", sortable: true},
             {key: "paypal_mail", label: "PayPal Mail", sortable: true},
-            {key: "wallet_address", label: "Bitcoin Address", sortable: true},
+            {key: "paypal_valid_status", label: "PayPal Valid", sortable: true, options: {'': '', '100': 'Valid', '500': 'Invalid', '501': 'Can only receive money from homepage', '502': 'Can not receive personal payments', '503': 'This recipient is currently unable to receive money'}},
+            {key: "wallet_address", label: "Bitcoin Address", sortable: true, },
             {key: "created_at", label: "Angemeldet am", sortable: true},
             {key: "last_online", label: "Zuletzt online", sortable: true},
             {key: "mail_checked", label: "Active", sortable: false},
@@ -83,7 +84,8 @@
             {key: "username"},
             {key: "mail"},
             {key: "paypal_mail"},
-            {key: "bitcoin_address"},
+            {key: "paypal_valid_status"},
+            {key: "wallet_address"},
             {key: "created_at", parser: "datetime"},
             {key: "last_online", parser: "datetime"},
             {key: "mail_checked"},
