--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -186,6 +186,12 @@
                     width: '5%',
                     list: true
                 },
+                paypal_valid_status: {
+                    title: 'paypal_valid_status',
+                    width: '5%',
+                    options: {'': '', '100': 'Valid', '500': 'Invalid', '501': 'Can only receive money from homepage', '502': 'Can not receive personal payments', '503': 'This recipient is currently unable to receive money'},
+                    list: true
+                },
                 wallet_address: {
                     title: 'wallet_address',
                     width: '5%',
