paypal_valid_status

--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -190,6 +190,7 @@
                     title: 'paypal_valid_status',
                     width: '5%',
                     options: {'': '', '100': 'Valid', '500': 'Invalid', '501': 'Can only receive money from homepage', '502': 'Can not receive personal payments', '503': 'This recipient is currently unable to receive money'},
+                    optionsSorting: 'text',
                     list: true
                 },
                 wallet_address: {
