--- a/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
+++ b/application/modules/default/views/scripts/product/partials/productCommentsUX1.phtml
@@ -40,7 +40,7 @@ $pageCount = $this->comments->getTotalItemCount()/$this->comments->getItemCountP
 ?>
 <div>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-12 col-md-12">
             <div class="page-header relative">
                 <h3 style="line-height: 15px;">
                     <small class="pull-right">
