--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2239,7 +2239,7 @@ span.page-views {
         .product-page {
             padding-top: 1em;
         }
-
+        /*
         ul.nav-tabs {
 
           li {
@@ -2256,6 +2256,7 @@ span.page-views {
             }
           }
         }
+        */
     }
 
     .my-products-page, .my-payments-page {
@@ -2648,7 +2649,7 @@ span.page-views {
     .about-me-details {
       padding-left: 0;
       padding-right: .5em;
-
+    /*
       ul.nav-tabs {
         margin-bottom: 20px;
 
@@ -2699,6 +2700,7 @@ span.page-views {
           }
         }
       }
+      */
 
       h3.about-me-heading {
         font-size: 1.5em;
