--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -42,6 +42,7 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
         padding-top: 10px;
         padding-bottom: 10px;
         background: transparent;
+        color:#fff;
     }
     .about-me-page .header .summary article .about-title figure{
         position: relative;
@@ -54,8 +55,9 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
         margin:0px;
     }
     .about-me-page .head-wrap{    
-        background: linear-gradient(black,white);
-        
+       background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 100%),  url('<?php echo  $this->member->profile_image_url_bg==null ?"/images/system/1-opendesktop-bg.png": $helperImage->Image($this->member->profile_image_url_bg,array('width' => 1900, 'height' => 450, 'crop' => 2)); ?>')  no-repeat ;
+       background-size:cover;
+  
     }
     .about-me-page .header .summary article{
         background: transparent;
@@ -66,6 +68,7 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
     .about-me-page div.timeinfo{
         font-size: 12px;
         padding-top: 30px;
+
     }
     .about-me-page div.timeinfo span.label-timeinfo{
         font-weight: 700;      
@@ -79,6 +82,15 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
     .about-me-page aside .col-container{
         padding: 20px;
     }
+    .about-me-page .tab-content{
+        margin-top: 20px;
+    }
+
+    .about-me-page .header article.membercontainer{
+        width: 100%;
+        height:375px;
+    }
+
 </style>
     <main class="about-me-page">
 
@@ -87,16 +99,14 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
             <!-- HEADER -->
 
             <section class="wrapper">
-
                 
- 
                 <!-- banner -->
 
                 <section class="header">
 
                     <!-- about me summary -->
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 summary" >
-                        <article class="" style="width: 100%;height:375px;">
+                        <article class="membercontainer" >
                             <div class="about-title">
                                 <figure class="relative inline profile-image-container">
                                     <img src="<?php echo $helperImage->Image($this->member->profile_image_url,array('width' => 110, 'height' => 110, 'crop' => 2)); ?>"
@@ -220,7 +230,7 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
 
                         <!-- tab panels -->
 
-                        <div class="tab-content">
+                        <div class="tab-content" >
 
                             <div role="tabpanel" class="tab-pane active" id="user-aboutme">
 
